add MaxDepth to Tree